--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     </head>
 
   <body>
-    <input type="text" id="search" placeholder="Search by location"/>
+    <form id="form">
+      <input type="text" id="search" placeholder="Search by location" autocomplete="off"/>
+    </form>
+    <main id="main"></main>
   </body>
 </html>
