--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     </head>
 
   <body>
+    <!-- https://github.com/florinpop17/10-projects-10-hours -->
+    <h1>Weather App</h1>
     <form id="form">
       <input type="text" id="search" placeholder="Search by location" autocomplete="off"/>
     </form>
